--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="#">link</a>
-        <a href="#">link2</a>
+        <a href="https://www.prepbytes.com/panel">link</a>
+        <a href="https://www.flipkart.com/">link2</a>
     </nav>
     <font color="#16174a" size="10">
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo animi officiis commodi quia nostrum, beatae quisquam sequi laborum alias modi. Officiis exercitationem voluptates commodi aut corporis reiciendis amet cumque odit.
